[tool.poetry]
name = "terra-sdk"
authors = ["Terraform Labs, PTE. <engineering@terra.money>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description = "The Python SDK for Terra"
documentation = "https://terra-money.github.io/terra.py/index.html"
homepage = "https://github.com/terra-money/terra.py"
keywords = ["jigu", "blockchain", "terra", "defi", "crypto"]
license = "MIT"
packages = [{ include = "terra_sdk" }]
readme = "README.md"
repository = "https://github.com/terra-money/terra.py"
version = "2.0.1"

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
attrs = "^20.3.0"
bech32 = "^1.2.0"
bip32utils = "^0.3.post4"
ecdsa = "^0.17.0"
mnemonic = "^0.19"
python = "^3.7"
wrapt = "^1.12.1"
nest-asyncio = "^1.5.1"
protobuf = "^3.19.1"
betterproto = "2.0.0b4"
furl = "^2.1.3"
boltons = "^21.0.0"
terra-proto = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3.1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.800"
pip = "^21.0"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-runner = "^5.2"
pytest-sugar = "^0.9.4"
watchdog = "^1.0.2"
wheel = "^0.36.2"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-autobuild = "^2020.9.1"
uvloop = "^0.14.0"
aioresponses = "^0.7.2"
asynctest = "^0.13.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
